[gd_scene load_steps=5 format=3 uid="uid://bsmwax7td4mle"]

[ext_resource type="Script" path="res://scenes/fail_screen/fail_screen.gd" id="1_85bjp"]
[ext_resource type="AudioStream" uid="uid://bwjbhvadalfi0" path="res://assets/sounds/Voice/OutroErfreut.wav" id="1_ci3xr"]
[ext_resource type="AudioStream" uid="uid://c4ixd06mplnxs" path="res://assets/sounds/Voice/OutroTraurig.wav" id="2_e5l0x"]

[sub_resource type="LabelSettings" id="LabelSettings_2sv82"]
font_size = 32

[node name="FailScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 906.0
offset_top = 483.0
offset_right = 906.0
offset_bottom = 483.0
script = ExtResource("1_85bjp")

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_left = -32.0
offset_top = 40.0
offset_right = 151.0
offset_bottom = 120.0

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Fail you lost"
label_settings = SubResource("LabelSettings_2sv82")
horizontal_alignment = 1

[node name="BackMainMenu" type="Button" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Go back to main menu"

[node name="BackToLevelSelector" type="Button" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Back to level selector"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("1_ci3xr")

[node name="OutroErfreut" type="AudioStreamPlayer" parent="AudioStreamPlayer2D"]
stream = ExtResource("2_e5l0x")
autoplay = true

[connection signal="pressed" from="CenterContainer/VBox/BackMainMenu" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBox/BackToLevelSelector" to="." method="_on_button_2_pressed"]
